# crypto

./: .env.example  .replit  WINDOWS_SETUP.md  app.py  main.py  pyproject.toml  replit.md
attached_assets/: Pasted--v-PS-C-Users-Dell-OneDrive-Desktop-PROJECTS-COSTUMERS-gtrade-crypto-python-main-py-ERROR-utils--1751472852465_1751472852466.txt  Pasted-We-are-going-to-build-a-Flask-web-application-for-the-Automated-Forex-Chart-Pattern-Recognition-Syst-1751462261263_1751462261263.txt  Pasted-markdown-Automated-Forex-Chart-Pattern-Recognition-System-Implementation-Guide-Overview--1751462234374_1751462234374.txt  Pasted-markdown-Automated-Forex-Chart-Pattern-Recognition-System-Implementation-Guide-Overview--1751474339456_1751474339457.txt  double_bottom_model_1751462203470.pkl  pattern_detector_1751462211636.py  triple_bottom_model_1751462203470.pkl
models/: .gitkeep  double_top_model.pkl  inverse_head_and_shoulders_model.pkl
static/css/: style.css
static/js/: script.js
templates/: index.html
utils/: __init__.py  data_fetcher.py  pattern_detector.py
